<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/moduleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_ic_home_label"/>

    <item
        android:id="@+id/guidelinesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_guidelines"
        android:title="@string/menu_ic_guidelines_label"/>

    <item
        android:id="@+id/toolsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_tools"
        android:title="@string/menu_ic_tools_label"/>

    <item
        android:id="@+id/simulationFragment"
        android:enabled="true"
        android:icon="@drawable/ic_simulation"
        android:title="Simulation"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_ic_profile_label"/>
</menu>