<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_module0"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_module_0_title"
            style="@style/White.TextSize18.ExtraBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_module0_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_getStarted"
            style="@style/GreyWhite.TextSize11.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tv_module0_getStarted"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_module_0_title" />

        <TextView
            style="@style/GreyWhite.TextSize11.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_module0_completionTime"
            app:layout_constraintBottom_toTopOf="@id/tv_getStarted"
            app:layout_constraintEnd_toStartOf="@id/iv_playBtn"
            app:layout_constraintTop_toBottomOf="@id/tv_module_0_title" />

        <ImageView
            android:id="@+id/iv_playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>