<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/Cream"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/iv_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_faqs" />

        <LinearLayout
            android:id="@+id/ll_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_toLeftOf="@id/tv_readBtn"
            android:layout_toRightOf="@id/iv_faq"
            android:orientation="vertical">

            <TextView
                style="@style/DarkGrey.TextSize18.ExtraBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_faqs_label" />

            <TextView
                style="@style/DarkGrey.TextSize11.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/tv_faq_subtitle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_readBtn"
            style="@style/GreyWhite.TextSize16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_start_btn_darkgrey"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/tv_readBtn_label"
            android:textAllCaps="true" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>