<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_moduleContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/bg_module1"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp">

        <RelativeLayout
            android:id="@+id/rl_moduleNo_moduleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_moduleNo"
                style="@style/Cream.TextSize20.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/iv_moduleImage"
                android:text="@string/tv_moduleNo" />

            <ImageView
                android:id="@+id/iv_moduleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_module_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_module_1_title"
            style="@style/White.TextSize18.ExtraBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_module_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_moduleNo_moduleImage" />

        <TextView
            android:id="@+id/tv_moduleNoInWords"
            style="@style/GreyWhite.TextSize11.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_module_1_title" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_moduleNoInWords">

            <TextView
                android:id="@+id/tv_moduleTime"
                style="@style/GreyWhite.TextSize11.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toLeftOf="@id/tv_startBtn"/>

            <TextView
                android:id="@+id/tv_startBtn"
                style="@style/GreyWhiteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_start_btn_greywhite"
                android:text="@string/tv_startBtnLabel"
                android:textAllCaps="true" />
        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>